# Agents-Collection

./: README.md
Assistant_PDF_Intelligent_RAG/: README.md  app.py  pyproject.toml
Assistant_PDF_Intelligent_RAG/data/: test2.txt
Assistant_PDF_Intelligent_RAG/src/: ingest.py  models.py  rag_agent.py  search_tool.py
