[project]
name = "assistant-pdf-intelligent-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "openai>=2.28.0",
    "pypdf>=6.8.0",
    "streamlit>=1.40.0",
]
